updated DEH elections for union

--- a/localisation/KR_Dominion_of_India_l_english.yml
+++ b/localisation/KR_Dominion_of_India_l_english.yml
@@ -347,8 +347,7 @@ delhi.115.a:0 "The Indian Liberal Party scores a landslide!"
 delhi.115.b:0 "The Swaraj Party carries the day!"
 delhi.115.c:0 "The leftist Home Rule Party sweeps into parliament!"
 delhi.115.e:0 "The farmer-gentry alliance of the Unionist Party triumphs!"
-
-
+delhi.115.f:0 "The Socialist Party of India achieves power!"
 
 delhi.150.t:0 "Death of Sir Sikander Hayat Khan"
 delhi.150.d:0 "One of the greatest statesmen of India, Sir Sikander Hayat Khan, passed away last night at his home in Multan, the Punjab. A great leader and politician, Hayat Khan had led the Unionist Party for several years and campaigned vigorously for the conservative ideals of his party. He is succeeded as chairman by the popular Jat leader, Sir Chhotu Ram."
