added post-union events for DEH

--- a/localisation/KR_Dominion_of_India_l_english.yml
+++ b/localisation/KR_Dominion_of_India_l_english.yml
@@ -44,6 +44,9 @@ BHC_PRF_war:0 "War between [BHC.GetNameDef] and [PRF.GetNameDef]"
 BHC_PRF_war_declined:0 "[BHC.GetNameDef] declined to invade [PRF.GetNameDef]"
 DEH_becomes_india:0 "§Y[DEH.GetNameDef]§! will become §YIndia§!\n"
 DEH_released_BUR:0 "Released Burma"
+DEH_unionist_wins:0 "the platform is approved and the §YUnionist Party§! wins re-election\n"
+DEH_socialist_wins:0 "the platform is approved and the §YSocialists§! win the election\n"
+DEH_jinnah_wins:0 "the platform is not approved and the §YHome Rule Party§! wins the election\n"
 
 ### Ideas ###
 DEH_princely_power:0 "Power of the Princes"
@@ -504,3 +507,27 @@ delhi.318.t:0 "Anti-Socialist Coup Fails"
 delhi.318.d:0 "An attempted coup by a group of Burmese army officers has been crushed by the incumbent government, despite our tacit support. Since we still have troops present in Western Burma, we could utilise the chaos to forcibly remove the leftist menace from Rangoon."
 delhi.318.a:0 "Then we must oust the leftist threat by force!"
 delhi.318.b:0 "Too bad"
+delhi.325.t:0 "The Indian Referendum"
+delhi.325.d:0 "After a month of turbulence, the referendum to approve the Unionist Party's platform for integrating the states of the former Bharatiya Commune is upon the nation. Approval in [DEH.GetNameDeh] is split, with opposition having coalesced around the leftist Home Rule party. Those who favor the platform are far more likely to vote in the Mahatma's new Socialist Party of India, a coalition of politicians from across the former Commune, and who enjoy solid support in Bengal to tip the balance in their favor. The most staunch opposition comes from the princely states in the Northwest, so severe that some are threatening to secede even if the platform is ultimately approved."
+delhi.325.a:0 "We shall see in a few days..."
+delhi.326.t:0 "The Platform is Approved"
+delhi.326.d.unionist:0 "After an incredibly close election, the platform to integrate the states of the former Commune has been approved. Even more, the Unionist Party has been re-elected, with most considering this the beginnings of a true dynasty for the party."
+delhi.326.d.socialist:0 "After an incredibly close election, the platform to integrate the states of the former Commune has been approved. While it has alarmed many, the Socialist Party has also been elected - mainly due to the overwhelming support for the Mahatma's ideals in the former Commune, but the party earned strong support throughout the entire Ganges region as well. It appears that the nation has moved even further to the left, though the Socialist leaders affirm they will uphold the Lucknow deal and not attempt to turn the nation towards syndicalism."
+delhi.326.a:0 "Well, that's a relief!"
+delhi.327.t:0 "The Platform Fails"
+delhi.327.d:0 "After an incredibly close election, the platform to integrate the states of the former Commune has failed and the Home Party has a mandate to take power until the next regular election. Where this leaves the former Commune is difficult to say, though army units are already moving into Calcutta and other southern cities to keep order should there be an outbreak of violence."
+delhi.327.a:0 "This could be trouble..."
+delhi.328.t:0 "Kashmir and Gujarat to Secede"
+delhi.328.d:0 "While the Unionist platform didn't receive much support anywhere in the northwest, the princely regions of Gujarat and Kashmir rejected it utterly. Riots have been frequent in the weeks since, and after a report that [DEH.GetAdjective] soldiers fired on an unruly crowd, the princes of Kashmir and Baroda have announced their intentions to secede and join [PRF.GetNameDef]. If we do not allow them to leave, the riots may get worse, and it could very well mean immediate war with the south."
+delhi.328.a:0 "It would be better to let them go, for now"
+delhi.328.b:0 "Absolutely not!"
+delhi.329.t:0 "Kashmir and Gujarat Join the Federation"
+delhi.329.d:0 "Having resoundingly rejected the northern plan to peacefully integrate socialists, the princely rulers of Kashmir and Gujarat have offered to join the Federation and take a stand against the foolish leftists of [DEH.GetNameDef]."
+delhi.329.a:0 "Welcome aboard!"
+delhi.330.t:0 "A Call For Help"
+delhi.330.d:0 "Having resoundingly rejected the northern plan to peacefully integrate socialists, the princely rulers of Kashmir and Gujarat announced their intention to secede and join [PRF.GetNameDef]...but, of course, they have been refused and [DEH.GetAdjective] soldiers are streaming into their provinces. Their rulers have reached out to us for help, saying they are fully willing to rise up and fight the socialists now, if we will only follow suit."
+delhi.330.a:0 "Rush to the aid of the princes!"
+delhi.330.b:0 "They are on their own - sorry"
+delhi.331.t:0 "Nehru Takes Over the Socialists"
+delhi.331.d:0 "With Gandhi now a memory, the young Jawaharlal Nehru - a prominent syndicalist leader from the former Bharatiya Commune who joined the socialist coalition upon union - has out-maneuvered Nirmal Kumar Bose to take the leadership of the Socialist Party. Bose, claiming to be completely blindsided by Nehru's actions, has elected to retire from politics."
+delhi.331.a:0 "An ambitious man"
