--- a/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
+++ b/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
@@ -362,6 +362,26 @@ plcommon.50.t:0 "The Mitteleuropa Question"
 plcommon.50.d:0 "With the formation of the new Polish-Lithuanian Commonwealth, our political status in the Mitteleuropa alliance is unclear. While Lithuania was a member of the alliance, Poland was not, and with the combination of our two governments, it seems that there is an opportunity to use Poland's status as a member outside of the alliance to leverage our way out, if we so choose. What should we do?"
 plcommon.50.a:0 "We still need German protection."
 plcommon.50.b:0 "We have outgrown this decaying alliance."
+plcommon.51.t:0 "The PLC Joins the Fourth International?"
+plcommon.51.d:0 "After their recent Syndicalist revolution, the new Polish-Lithuanian Commonwealth is seeking to join the ranks of true Syndicalism worldwide, the Fourth International. Should we allow them into our ranks?"
+plcommon.51.a:0 "Our brothers!"
+plcommon.51.b:0 "Their belief in our cause is flimsy."
+plcommon.52.t:0 "The International Grows!"
+plcommon.52.d:0 "The Soviet Union has accepted our entry to the Fourth International! We stand firm with our brothers in Syndicalism!"
+plcommon.52.a:0 "The wheels of revolution turn!"
+plcommon.53.t:0 "The Soviet Union Dismisses PLC Interest"
+plcommon.53.d:0 "Seemingly distrusting the new Syndicalist regime in the Polish-Lithuanian Commonwealth, the Soviet Union has denied our entry into the Fourth International, stating that our belief in their ideals is too weak. Without the help of the Fourth International, our future in Europe looks bleak."
+plcommon.53.a:0 "Impossible!"
+plcommon.54.t:0 "The PLC Joins the Internationale?"
+plcommon.54.d:0 "After their recent Syndicalist revolution, the new Polish-Lithuanian Commonwealth is seeking to join the ranks of true Syndicalism worldwide, the Fourth International. Should we allow them into our ranks?"
+plcommon.54.a:0 "Our brothers!"
+plcommon.54.b:0 "Their belief in our cause is flimsy."
+plcommon.55.t:0 "The Internationale Grows!"
+plcommon.55.d:0 "The French Commune has accepted our entry to the Fourth International! We stand firm with our brothers in Syndicalism!"
+plcommon.55.a:0 "The wheels of revolution turn!"
+plcommon.56.t:0 "The French Commune Dismisses Polish Interest"
+plcommon.56.d:0 "Seemingly distrusting the new Syndicalist regime in the Polish-Lithuanian Commonwealth, the Soviet Union has denied our entry into the Fourth International, stating that our belief in their ideals is too weak. Without the help of the Fourth International, our future in Europe looks bleak."
+plcommon.56.a:0 "Impossible!"
 
 ### Parties ###
 PLC_totalist_party:0 "Free Worker's Party"
