--- a/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -1831,6 +1831,13 @@ MAD_DRAV_totalist:0 "Dravidian Commune"
 MAD_DRAV_totalist_ADJ:0 "Dravidian"
 MAD_DRAV_totalist_DEF:0 "The Dravidian Commune"
 
+BHC_TOT_totalist:0 "Maximist Revolt"
+BHC_TOT_totalist_ADJ:0 "Maximist"
+BHC_TOT_totalist_DEF:0 "The Maximist Revolt"
+BHC_AGR_radical_socialist:0 "Agrarian Revolt"
+BHC_AGR_radical_socialist_ADJ:0 "Agrarian"
+BHC_AGR_radical_socialist_DEF:0 "The Agrarian Revolt"
+
 LYB_ITA_subject:0 "Italian North Africa"
 LYB_ITA_subject_DEF:0 "Italian North Africa"
 LYB_ITA_subject_ADJ:0 "Libyan"
