Back from holiday - Kaiserbund Cosmetic tag fixes (again)

--- a/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -1873,13 +1873,72 @@ MOR_GER_subject:0 "Freistaat Marokko"
 MOR_GER_subject_ADJ:0 "Marokkan"
 MOR_GER_subject_DEF:0 "Freistaat Marokko"
 
-CRE_GER_subject:0 "Cretan State"
-CRE_GER_subject_DEF:0 "The Cretan State"
 CRE_GRE_subject:0 "Cretan State"
+CRE_GER_subject_ADJ:0 "Cretan"
 CRE_GRE_subject_DEF:0 "The Cretan State"
 CRE_OTT_subject:0 "Cretan Vilayet"
 CRE_OTT_subject_DEF:0 "The Cretan Vilayet"
+CRE_OTT_subject_ADJ:0 "Cretan"
 
+SOM_GER_subject: "Kingdom of Somalia"
+SOM_GER_subject_DEF:0 "Somali"
+SOM_GER_subject_ADJ:0 "Kingdom of Somalia"
+
+GHA_GER_subject:0 "Kingdom of Ashanti"
+GHA_GER_subject_ADJ:0 "Ashanti"
+GHA_GER_subject_DEF:0 "The Kingdom of Ashanti"
+
+NGR_GER_subject:0 "Nigeria"
+NGR_GER_subject_ADJ:0 "Nigerian"
+NGR_GER_subject_DEF:0 "Nigeria"
+
+CEA_GER_subject:0 "Ubangi-Shari"
+CEA_GER_subject_ADJ:0 "Ubangi"
+CEA_GER_subject_DEF:0 "Ubangi-Shari"
+
+GAB_GER_subject:0 "Gabon"
+GAB_GER_subject_ADJ:0 "Gabonese"
+GAB_GER_subject_DEF:0 "Gabon"
+
+CNR_GER_subject:0 "Congo"
+CNR_GER_subject_ADJ:0 "Congolese"
+CNR_GER_subject_DEF:0 "Congo"
+
+TNZ_GER_subject:0 "Tanganyika"
+TNZ_GER_subject_ADJ:0 "Tanganyikan"
+TNZ_GER_subject_DEF:0 "Tanganyika"
+
+NAM_GER_subject:0 "Namibia"
+NAM_GER_subject_ADJ:0 "Namibian"
+NAM_GER_subject_DEF:0 "Namibia"
+
+KEN_GER_subject:0 "Kenya"
+KEN_GER_subject_ADJ:0 "Kenyan"
+KEN_GER_subject_DEF:0 "Kenya"
+
+UGA_GER_subject:0 "Buganda"
+UGA_GER_subject_ADJ:0 "Bugandan"
+UGA_GER_subject_DEF:0 "Buganda"
+
+ANG_GER_subject:0 "Angola"
+ANG_GER_subject_ADJ:0 "Angolan"
+ANG_GER_subject_DEF:0 "Angola"
+
+MOZ_GER_subject:0 "Mozambique"
+MOZ_GER_subject_ADJ:0 "Mozambican"
+MOZ_GER_subject_DEF:0 "Mozambique"
+
+BOT_GER_subject:0 "Botswana"
+BOT_GER_subject_ADJ:0 "Botswanian"
+BOT_GER_subject_DEF:0 "Botswana"
+
+ZIM_GER_subject:0 "Rhodesia"
+ZIM_GER_subject_ADJ:0 "Rhodesian"
+ZIM_GER_subject_DEF:0 "Rhodesia"
+
+YEM_GER_subject:0 "Yemen"
+YEM_GER_subject_ADJ:0 "Yemeni"
+YEM_GER_subject_DEF:0 "Yemen
 
 ##############
 #Vanilla
