--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -7058,9 +7058,9 @@ ZIM_market_liberal_DEF:0 "Zimbabwe"
 ZIM_social_conservative:0 "Zimbabwe"
 ZIM_social_conservative_ADJ:0 "Zimbabwean"
 ZIM_social_conservative_DEF:0 "Zimbabwe"
-ZIM_authoritarian_democrat:0 "Rhodesia"
-ZIM_authoritarian_democrat_ADJ:0 "Rhodesian"
-ZIM_authoritarian_democrat_DEF:0 "Rhodesia"
+ZIM_authoritarian_democrat:0 "Zimbabwe"
+ZIM_authoritarian_democrat_ADJ:0 "Zimbabwean"
+ZIM_authoritarian_democrat_DEF:0 "Zimbabwe"
 ZIM_paternal_autocrat:0 "Zimbabwe"
 ZIM_paternal_autocrat_ADJ:0 "Zimbabwean"
 ZIM_paternal_autocrat_DEF:0 "Zimbabwe"
