--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -396,3 +396,47 @@ worldnews.257.t:0 "Civil War in Ethiopia"
 worldnews.257.d:0 "Civil war has erupted in Ethiopia after Haile Selassie I's refusal to back down over his industry reforms. The nobility have taken up arms agains the Negus Negast, seeking to take over the country by force. Only time will tell if they can succeed."
 worldnews.257.a:0 "The land of Solomon succumbs to internal strife, too."
 worldnews.257.b:0 "We will see those cowardly traitors through."
+
+### City falls from the Siamese files
+
+worldnews.258.t:0 "The Fall of Singapore"
+worldnews.258.d:0 "Singapore, the 'Gibraltar of the East,' has been seized by Royal [SIA.GetAdjective] forces despite having been considered an impregnable fortress by its former British owners and its new German overlords.\n\nThe [SIA.GetAdjective] Military Administration of Singapore has chosen the Fullerton Building as its headquarters, and the city has been renamed Singhanakhon, which roughly translates to 'Lion City' The Sarawat Taharn can be seen patrolling the streets en masse to hammer in the message that the [SIA.GetAdjective] are there to stay."
+worldnews.258.a:0 "That's unexpected"
+worldnews.258.b:0 "They're rightfully ours!"
+worldnews.258.c:0 "Mein gott!"
+
+worldnews.259.t:0 "The Fall of Sydney"
+worldnews.259.d:0 "Further expanding on its conquests in the south, [SIA.GetNameDef] has seized Sydney in Australasia. Local defenders were forced to retreat across the Sydney Harbour Bridge to new positions on Observatory Hill, but attempts to demolish the bridge were thwarted by advancing [SIA.GetAdjective] forces.\n\nThe [SIA.GetAdjective] war flag can now be seen hanging from the Sydney Town Hall, which serves as the headquarters of the city's new military administration, and the Sarawat Taharn military police are maintaining a watchful eye on the streets."
+worldnews.259.a:0 "A significant development"
+worldnews.259.b:0 "We shall be triumphant!"
+worldnews.259.c:0 "This is a disaster!"
+
+worldnews.260.t:0 "The Fall of Hong Kong"
+worldnews.260.d:0 "Troops from [SIA.GetNameDef] have captured the former British Crown Colony of Hong Kong after breaking through the Gin Drinkers Line and landing on Hong Kong Island itself. The situation soon became untenable for the defenders, and the Governor surrendered in person at the Peninsula Hong Kong hotel where the [SIA.GetAdjective] had established their headquarters.\n\nAfter a brief ceremony, a new [SIA.GetAdjective] governor was installed who announced a 'New Hong Kong' to the world, 'free of Western colonialism.'"
+
+worldnews.261.t:0 "The Fall of Manila"
+worldnews.261.d:0 "Manila, capital of the Philippines, has fallen to the [SIA.GetAdjective] after the withdrawal of its Filipino defenders and her allies. The entrance to the strategically vital Manila Bay remained contested for some time after the city's fall due to the heavy concentration of Filipino coastal artillery on Corregidor Island, but the guns eventually fell silent after a concerted [SIA.GetAdjective] attack.\n\nWith Manila under [SIA.GetAdjective] control, the rest of the Philippines are expected to follow shortly after. This is a stinging defeat for the [From.GetFactionName] forces in Asia and the Pacific."
+
+worldnews.262.t:0 "The Fall of Calcutta"
+worldnews.262.d:0 "After a period of heavy bombardment, it has now been confirmed that the city of Calcutta in the Bharatiya Commune has fallen to advancing [SIA.GetAdjective] forces. Even while sporadic fighting was still occurring in the outskirts of the city, a victory parade was quickly organised on Chowringhee avenue.\n\nMembers of the Indian National Army, a military outfit organised by the [SIA.GetAdjective] and dedicated to the liberation of India from the Syndicalist's grasp, took part in the parade and drew wild cheers from the crowds. With the fall of Calcutta, many predict that all of Bharatiya Commune will soon follow."
+
+worldnews.263.t:0 "The Fall of New Delhi"
+worldnews.263.d:0 "[SIA.GetAdjective] offensives continue in the Dominion of India, and the fall of New Delhi recently took place. As the capital of the Dominion of India, this city is of immense strategic importance and its loss may prove to be a decisive factor in the ongoing Indian campaign.\n\nThe Viceroy himself was reportedly captured by [SIA.GetAdjective] forward units while he was supervising the transfer of his belongings from the Viceroy's House to a truck caravan, but this has not yet been confirmed."
+
+worldnews.264.t:0 "The Fall of Bangkok"
+worldnews.264.d:0 "Earlier today, the victorious British soldiers march through the streets of Bangkok after fierce fighting for most of the day. Most building along the Ratchadamnoen road were ruined by the artillery barrage with the Union Jack is now raised over what is left of the old Ananta Samakhom throne hall that was used by the [SIA.GetAdjective] government as their parliament.\n\nThe [SIA.GetAdjective] king agreed to accept our post-war demand with lots of Seri Thai movement members now taking their pre-arranged provisional government positions as most old cabinet members are now presumed to be dead as their secret hiding place was bombed by one of our infiltrators beforehand."
+worldnews.264.a:0 "And thus the end of the last free nation in Southeast Asia..."
+worldnews.264.b:0 "One of the problem solved"
+worldnews.264.c:0 "As long as we fight, we shall never fall!"
+
+worldnews.265.t:0 "The Fall of Bangkok"
+worldnews.265.d:0 "The hinomaru already flies from every building across Bangkok, now renamed Bankoku, and Japanese officials have already implanted a new transitional administration to handle their new conquest.\n\nAlready, dissenters have been gathered up and driven off in the middle of the night, and the [SIA.GetAdjective] army units who have surrendered have begun a march to new camps being built for them in the countryside. Several local [SIA.GetAdjective] leaders have been offered seppuku, to atone for their failure and due to the possibility of resistance rallying around them, the offer was not voluntary. Bangkok's Grand Palace has already begun renovations to be one of the Emperor's new seasonal residences."
+worldnews.265.a:0 "That's unexpected..."
+worldnews.265.b:0 "The east shall expanded further!"
+worldnews.265.c:0 "As long as we fight, we shall never fall!"
+
+worldnews.266.t:0 "The Fall of Bangkok"
+worldnews.266.d:0 "Earlier today, the victorious Australasian soldiers march through the streets of Bangkok after fierce fighting for most of the day. Most buildings along the Ratchadamnoen road were ruined by the artillery barrage with the Union Jack is now raised over the Ananta Samakhom throne hall that was used by the [SIA.GetAdjective] government as their parliament.\n\nThe [SIA.GetAdjective] king agreed to accept our post-war demand. Now, with the last of the organised defences stamped out and the [SIA.GetAdjective] army surrendering or desperately attempting to retreat, it seems that [SIA.GetNameDef] is likely to capitulate soon enough."
+worldnews.266.a:0 "And thus the end of the last free nation in Southeast Asia..."
+worldnews.266.b:0 "Congratulations for all of the Outbackers!"
+worldnews.266.c:0 "As long as we fight, we shall never fall!"
