last of the BHC events

--- a/localisation/KR_Bharatiyan_Commune_l_english.yml
+++ b/localisation/KR_Bharatiyan_Commune_l_english.yml
@@ -61,6 +61,8 @@ BHC_summit_refused:0 "The summit can no longer occur\n"
 BHC_summit_agreed:0 "The summit proposal has been accepted\n"
 BHC_summit_called_off:0 "The Lucknow Summit will be canceled\n"
 BHC_surrender_to_totalists:0 "Surrender to the Maximists!\n"
+BHC_surrender_to_agrarians:0 "Surrender to the Agrarians!\n"
+BHC_gandhi_assassinated:0 "§YMohandas Karamchand Gandhi§! is assassinated\n"
 
 ### Parties ###
 BHC_totalist_party:0 "Maximists"
@@ -492,12 +494,35 @@ beng.85.e:0 "I see..."
 beng.86.t:0 "The Maximists Are Defeated"
 beng.86.d:0 "Subhas Chandra Bose and his Maximists have been defeated, and already many of their leadership have been rounded up and imprisoned. The Maximists themselves will no longer be welcome at Congress, though the Agrarians are loathe to actually outlaw them entirely or execute any of their members. Surely they would have done the same in reverse, had they the chance."
 beng.86.a:0 "But we're not them, are we?"
-beng.87.t:0 "The Maximists Are Victorious!"
+beng.87.t:0 "We Are Victorious!"
 beng.87.d:0 "We have gained control over the entirety of the Bharatiya Commune - its future is now ours to dictate!"
 beng.87.a:0 "As it should be!"
 beng.88.t:0 "[From.GetName] In Chaos"
 beng.88.d:0 "While we avoided stepping into the conflict during its civil war, as both sides would quickly end their conflict the moment we crossed the border, the dust has settled in [From.GetNameDef] and it is now weak...perhaps weak enough to be easily defeated."
 beng.88.a:0 "They picked a poor time for a civil war"
+beng.89.t:0 "Gandhi Threatens War"
+beng.89.d.purge:0 "The purges to the Commune's army - more important, the efforts made by the Maximists to eliminate all officers loyal to the other factions - has stirred a great deal of anger within the Indian National Congress. The opposition has centered on the Mahatma himself, who has called on Bose to step down and threatened a general uprising against the Maximists if he does not. It seems the Mahatma's policy of peace at all costs has its limits."
+beng.89.d.war:0 "The recent efforts of the Maximists to ready the people for war, and - perhaps more importantly - the efforts to ensure their loyalty is solely to the totalist portion of the Indian National Congress has elicited a great deal of alarm from the syndicalist and socialist leadership. The opposition has centered on the Mahatma himself, who has called on Bose to step down and the Maximists to end their march towards open war...and threatened a general uprising against the Maximists if this does not happen. It seems the Mahatma's policy of peace at all costs has its limits."
+beng.89.a:0 "The time has come to eliminate the Agrarians altogether"
+beng.89.b:0 "Quietly eliminate the troublemaker Gandhi"
+beng.90.t:0 "Agrarians Seize Calcutta!"
+beng.90.d:0 "Agrarian forces have stormed into the capital, seizing the Indian National Congress buildings and rounding up the leaders of the Maximists. Subhas Chandra Bose has been arrested, and the Maximists themselves have had their power severely curtailed - indeed, they may not even be able to participate in future Congress events. The civil war is now over."
+beng.90.a:0 "This will hurt"
+beng.91.t:0 "Gandhi Begins Civil War"
+beng.91.d:0 "Though long having been renowned for his pacifist ways, it seems even the Mahatma has his limits - after repeated calls for the Maximist faction of the Indian National Congress, led by Subhas Chandra Bose, to cease their warmongering and purges of the Bharatiya Commune's army, Mohandas Karamchand Gandhi has begun a widespread insurrection in the hillsides to topple the totalist government by force. Some have commented that the Mahatma was forced into this awkward position by Bose, who had ordered him arrested on the day the war began, and has now ordered for his immediate execution should the Agrarian forces be defeated."
+beng.91.a:0 "The traitor must die!"
+beng.91.b:0 "Let us pray for the Mahatma"
+beng.91.c:0 "The socialists eat their own tail, it seems"
+beng.91.e:0 "I see..."
+beng.92.t:0 "Agrarians Seize Calcutta"
+beng.92.d:0 "Agrarian forces serving under Mohandas Karamchand Gandhi today drove into the heart of Calcutta, surrounding the Indian National Congress building and reportedly rounding up totalist leaders. The current whereabouts of the Maximist chairman, Subhas Chandra Bose, are currently unknown, but Gandhi and the Agrarians have been quick to take full control of the government and restore order. The Maximist faction has been outlawed, meaning that [BEH.GetNameDef]'s quick march towards open war with the rest of India has now been curtailed."
+beng.92.a:0 "Justice has been served"
+beng.92.b:0 "Does this make them weaker or stronger?"
+beng.92.c:0 "It does not matter who is in charge - they will lose"
+beng.92.e:0 "I see..."
+beng.93.t:0 "The Agarians Are Defeated"
+beng.93.d:0 "Mohandas Karamchand Gandhi and his Agrarians have been defeated, and already many of their leadership have been rounded up and imprisoned. The Agarians as a whole will no longer be welcome at Congress, their faction having been outlawed, and many of their most important members will be summarily executed after a speedy trial. Surely they would have done the same in reverse, had they the chance."
+beng.93.a:0 "They will never get that chance again"
 beng.99.t:0 "Victory of the Bharatiya Commune"
 beng.99.d:0 "Since the end of the Weltkrieg, the Indian sub-continent has been split into three sides: the loyalist remnants of the British Raj, the socialists of the Indian National Congress, and the reactionary Indian princes who rejected both sides. With the dust having finally settled, the socialists have proven triumphant and the Bharatiya Commune now rules unopposed over the region, setting itself up to become a preeminent world power once it recovers from the devastation of its civil war."
 beng.99.a:0 "Jai Hind!"
