--- a/localisation/KR_Princely_Federation_l_english.yml
+++ b/localisation/KR_Princely_Federation_l_english.yml
@@ -425,8 +425,8 @@ prf.160.t:0 "Victory in the North"
 prf.160.d:0 "We have driven the perfidious British lapdogs from the continent! The time has come to win the peace for all of India by sending an envoy to Delhi's [faction_head.GetAdjective] masters and demanding they end their war against us and leave our people be."
 prf.160.a:0 "Propose an armistice!"
 prf.160.b:0 "No, we shall fight on!"
-prf.161.t:0 "Princely India Proposes Peace"
-prf.161.d:0 "Grim news have reached our government. The pro-[Root.GetFactionName] government in Delhi has been toppled and their territory all but united under Princely hegemony. With no obvious way for us to continue our intervention without considerable losses and questionable hope of success, the [From.GetAdjective] government has proposed a peace settlement, ending our involvement in India forever."
+prf.161.t:0 "[From.GetName] Proposes Peace"
+prf.161.d:0 "Grim news have reached our government. The pro-[Root.GetFactionName] government in Delhi has been toppled and their territory all but united under [From.GetAdjective] hegemony. With no obvious way for us to continue our intervention without considerable losses and questionable hope of success, the [From.GetAdjective] government has proposed a peace settlement, ending our involvement in India forever."
 prf.161.a:0 "We have to choice but to accept"
 prf.161.b:0 "No! The Delhi Government shall be restored!"
 prf.170.t:0 "Princely India Wants to Join [Root.GetFactionName]"
