"Sweden shall always remain Sweden" - David

--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -5983,15 +5983,15 @@ SVK_national_populist:0 "Kingdom of Slovakia"
 SVK_national_populist_ADJ:0 "Slovakian"
 SVK_national_populist_DEF:0 "The Kingdom of Slovakia"
 
-SWE_totalist:0 "People's Republic of Sweden"
+SWE_totalist:0 "Sweden"
 SWE_totalist_ADJ:0 "Swedish"
-SWE_totalist_DEF:0 "The People's Republic of Sweden"
-SWE_syndicalist:0 "Swedish Autonomous Republic"
+SWE_totalist_DEF:0 "Sweden"
+SWE_syndicalist:0 "Sweden"
 SWE_syndicalist_ADJ:0 "Swedish"
-SWE_syndicalist_DEF:0 "The Swedish Autonomous Republic"
-SWE_radical_socialist:0 "People's Republic of Sweden"
+SWE_syndicalist_DEF:0 "Sweden"
+SWE_radical_socialist:0 "Sweden"
 SWE_radical_socialist_ADJ:0 "Swedish"
-SWE_radical_socialist_DEF:0 "The People's Republic of Sweden"
+SWE_radical_socialist_DEF:0 "Sweden"
 SWE_social_democrat:0 "Sweden"
 SWE_social_democrat_ADJ:0 "Swedish"
 SWE_social_democrat_DEF:0 "Sweden"
