Some cities and other minor stuff

--- a/localisation/KR_Victory_Points_l_english.yml
+++ b/localisation/KR_Victory_Points_l_english.yml
@@ -581,7 +581,7 @@ VICTORY_POINTS_11349:0 "Rzhev"
 VICTORY_POINTS_11370:0 "Minsk"
 VICTORY_POINTS_11375:0 "Nizhny Novgorod"
 VICTORY_POINTS_11380:0 "Norrköping"
-VICTORY_POINTS_11405:0 "Aleksandrovsk"
+VICTORY_POINTS_11405:0 "Oleksandrovsk"
 VICTORY_POINTS_11407:0 "Bastenach"
 VICTORY_POINTS_11435:0 "Bitburg"
 VICTORY_POINTS_11437:0 "Katerynoslav"
