updated PRF civil war chain

--- a/localisation/KR_Bharatiyan_Commune_l_english.yml
+++ b/localisation/KR_Bharatiyan_Commune_l_english.yml
@@ -423,10 +423,17 @@ beng.58.a:0 "Jai Hind!"
 beng.59.t:0 "Socialist Uprising in Kolhapur!"
 beng.59.d:0 "Even as [BHC.GetAdjective] troops cross our border, we have reports that a socialist uprising has begun in the remote hills of Kolhapur - no doubt organized by [BHC.GetNameDef] itself, right under our noses, to give us a second front to fight. We will need to move quickly."
 beng.59.a:0 "Damned socialist bastards!"
-beng.60.t:0 "The Collapse of the Hyderabad Government"
-beng.60.d:0 "Osman Ali Khan’s autocratic ambitions and hubris have finally driven the southern princes into open revolt! For the second time in a decade, the Hindu rulers of Mysore and Travancore waver in their oaths of loyalty towards their nominal overlord. Kannada and Malayalam troops already openly engage army units loyal to the Hyderabad government whilst the federal apparatus of state in the south has been thrown into absolute disarray. Consequently, with the Nizam’s administration barely clinging onto power in the Deccan Plateau, intervention by Union forces could result in the complete disintegration of one of the two other rival governments. However, such an attack could be risky, given the fragile balance of power between the three successor states to the Raj."
-beng.60.a:0 "We shall liberate the working people of the Deccan!"
-beng.60.b:0 "This is no business of ours..."
+beng.60.t:0 "Chaos in [PRF.GetNameDef]!"
+beng.60.d:0 "Osman Ali Khan’s autocratic ambitions and hubris have finally driven the southern princes into open revolt! For the second time in a decade, the Hindu rulers of Mysore and Travancore waver in their oaths of loyalty towards their nominal overlord. Kannada and Malayalam troops already openly engage army units loyal to the Hyderabad government whilst the federal apparatus of state in the south has been thrown into absolute disarray. While it risks provoking the Nizam into war with us, and perhaps [DEH.GetNameDef], this could be an opportune time to seize nearby Nagpur which lies just across our border. Chances are good the Nizam is too busy to respond and will simply let it go."
+beng.60.a:0 "Send forces in to occupy Nagpur"
+beng.60.b:0 "No, this is too risky a plan"
+beng.61.t:0 "Socialist Forces Move Into Nagpur"
+beng.61.d:0 "No doubt taking advantage of our chaotic state, soldiers from [BHC.GetNameDef] have begun streaming across the border into the city of Nagpur, fully intending to seize it and the entire state while we are busy with our civil war. If we attempt to stop them, it will mean open war with the east in addition to our current problems."
+beng.61.a:0 "We have no choice but to let them have it"
+beng.61.b:0 "We must fight for our territorial integrity!"
+beng.62.t:0 "Nagpur Is Ours"
+beng.62.d:0 "As we suspected, the [PRF.GetAdjective] forces are too preoccupied to do much more than express outrage at our occupation of Nagpur. By the time the war is done, the border will have been solidified."
+beng.62.a:0 "A fait accompli!"
 beng.70.t:0 "A Message of Peace"
 beng.70.d:0 "Our government has received a  message today, sent through channels by [BHC.GetNameDef] leadership. In it, the Mahatma requests a secret meeting between our nations - without our allies or others present, only true Indians - to discuss the possibility of a peaceful merger. One can only speculate what the Mahatma would ask, though most assume it would mean withdrawing from the Entente at the very least, and it's expected that such a plan would meet harsh resistance from the [BHC.GetAdjective] Totalist faction. But...what if it's true? What if the Mahatma can indeed quell his extremists, and we can discuss a union without ever firing a shot? The reactionaries of [PRF.GetNameDef] would never go for such a deal, but should we?"
 beng.70.a:0 "We will attend the secret summit, if it's held"
