--- a/localisation/KR_Dominion_of_India_l_english.yml
+++ b/localisation/KR_Dominion_of_India_l_english.yml
@@ -296,15 +296,22 @@ delhi.13.a:0 "Have a series of 5 year plans dictate the economy!"
 delhi.13.b:0 "Enact a balanced system where the government can intervene if necessary!"
 delhi.13.c:0 "A free market for a free people!"
 
-delhi.20.t:0 "The Second Betrayal of the Princes"
-delhi.20.d:0 "Osman Ali Khan’s autocratic ambitions and hubris have finally driven the southern princes into open revolt! For the second time in a decade, the Hindu rulers of Mysore and Travancore waver in their oaths of loyalty towards their nominal overlord. Kannada and Malayalam troops already openly engage army units loyal to the Hyderabad government whilst the federal apparatus of state in the south has been thrown into absolute disarray. Consequently, with the Nizam’s administration barely clinging onto power in the Deccan Plateau, intervention by Dominion forces could result in the complete disintegration of one of the two other rival governments. However, such an attack could be risky, given the fragile balance of power between the three successor states to the Raj."
-delhi.20.a:0 "This is our time, strike against the mad Nizam!"
-delhi.20.b:0 "This is no business of ours..."
 delhi.21.t:0 "The Burmese Question"
 delhi.21.d:0 "A successor state to the late British Raj, Burma's recent history has been troubled. Destabilized by internal friction against the Konbaung dynasty and exploitation of the nascent oil industry, the Burmese have now been freed of the hassle of running their own country by our victorious troops. However, Burma was only a loosely integrated part of the Raj - and some officials within our own government strongly disagree with outrightly annexing the Burmese districts, instead advocating the creation of a nominal independent Burma - under the benevolent guidance of our own government of course."
 delhi.21.a:0 "Restore an independent Burma"
 delhi.21.b:0 "Integrate the Burmese districts into our state"
 delhi.21.c:0 "Restore the Konbaung dynasty!"
+delhi.22.t:0 "Chaos in [PRF.GetNameDef]!"
+delhi.22.d:0 "Osman Ali Khan’s autocratic ambitions and hubris have finally driven the southern princes into open revolt! For the second time in a decade, the Hindu rulers of Mysore and Travancore waver in their oaths of loyalty towards their nominal overlord. Kannada and Malayalam troops already openly engage army units loyal to the Hyderabad government whilst the federal apparatus of state in the south has been thrown into absolute disarray. While it risks provoking the Nizam into war with us, and perhaps [BHC.GetNameDef], this could be an opportune time to seize the Bombay Presidency which lies just across our border. Chances are good the Nizam is too busy to respond and will simply let it go."
+delhi.22.a:0 "Send forces in to occupy Bombay"
+delhi.22.b:0 "No, this is too risky a plan"
+delhi.23.t:0 "Dominion Forces Move Into Bombay"
+delhi.23.d:0 "No doubt taking advantage of our chaotic state, soldiers from [DEH.GetNameDef] have begun streaming across the border into the former Bombay Presidency, fully intending to seize it while we are busy with our civil war. If we attempt to stop them, it will mean open war with the north in addition to our current problems."
+delhi.23.a:0 "We have no choice but to let them have it"
+delhi.23.b:0 "We must fight for our territorial integrity!"
+delhi.24.t:0 "Bombay Is Ours"
+delhi.24.d:0 "As we suspected, the [PRF.GetAdjective] forces are too preoccupied to do much more than express outrage at our occupation of Bombay. By the time the war is done, the border will have been solidified."
+delhi.24.a:0 "A fait accompli!"
 
 delhi.100.t:0 "The Case of the Princely Armies"
 delhi.100.d:0 "Besides retaining informal sovereignty during the paramountcy of the British Raj, the Princely States also fielded their own private armies, ranging in size from mere regiments to several battalions of infantry, cavalry and artillery. Now, with our new government already having decided on the internal status the Princely remnants, the lingering question of what to do with their armies finally surfaces. Some argue that the Princes retain nominal control over the forces in question while at the same time expanding their ranks in order to keep them up to date with the regular state forces. Others believe it is time to bring the princely troops directly and unequivocally under the control of parliament as equal units to the standard army divisions. At the same time a minority of reactionary maharajas and feudal landowners advocate a maintaining of the status quo, although this approach is highly unpopular."
