--- a/localisation/KR_State_Names_l_english.yml
+++ b/localisation/KR_State_Names_l_english.yml
@@ -239,7 +239,7 @@ STATE_236:0 "Astrakhan"
 STATE_237:0 "Elista"
 STATE_238:0 "Tsimlyanskaya"
 STATE_239:0 "Saratov"
-STATE_240:0 "Bilhorod"
+STATE_240:0 "Belgorod"
 STATE_241:0 "Gomel"
 STATE_242:0 "Smolensk"
 STATE_243:0 "Roslavl"
