VP names now included

--- a/localisation/KR_Victory_Points_l_english.yml
+++ b/localisation/KR_Victory_Points_l_english.yml
@@ -306,7 +306,7 @@ VICTORY_POINTS_6377:0 "Hannover"
 VICTORY_POINTS_6380:0 "Moskva"
 VICTORY_POINTS_6384:0 "Liverpool"
 VICTORY_POINTS_6389:0 "Kiel"
-VICTORY_POINTS_6418:0 "Plzen"
+VICTORY_POINTS_6418:0 "Plzeň"
 VICTORY_POINTS_6449:0 "Cherbourg"
 VICTORY_POINTS_6469:0 "Essen"
 VICTORY_POINTS_6474:0 "Yuzivka"
