PLC Tree Functionally Complete

--- a/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
+++ b/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
@@ -7,6 +7,82 @@ PLC_black_monday:0 "Effects of Black Monday"
 PLC_black_monday_desc:0 "Germany's Black Monday has also affected our country. We have to act."
 PLC_black_monday1:0 "Effects of Black Monday"
 PLC_black_monday1_desc:0 "Germany's Black Monday has also affected our country. We have to act."
+PLC_POL_air_force:0 "Polish Royal Air Force"
+PLC_POL_air_force_desc:0 ""
+PLC_LIT_air_force:0 "Lithuanian Royal Air Force"
+PLC_LIT_air_force_desc:0 ""
+PLC_conforming_rail_gauge_idea:0 "ConformeD Rail Gauges"
+PLC_conforming_rail_gauge_idea_desc:0 ""
+PLC_mobile_army_idea:0 "A Mobile Army"
+PLC_mobile_army_idea_desc:0 ""
+PLC_lithuanian_tactics_idea:0 "Lithuanian Defensive Tactics"
+PLC_lithuanian_tactics_idea_desc:0 ""
+PLC_polish_leadership_idea:0 "Polish Offensive Tactics"
+PLC_polish_leadership_idea_desc:0 ""
+PLC_integrating_two_armies_bonus_idea:0 "Combined Tactics"
+PLC_integrating_two_armies_bonus_idea_desc:0 ""
+PLC_integrating_two_armies_idea:0 "Integrating Two Armies"
+PLC_integrating_two_armies_idea_desc:0 ""
+PLC_polish_enthusiasm_idea:0 "Polish Enthusiasm"
+PLC_polish_enthusiasm_idea_desc:0 ""
+PLC_secret_police_idea:0 "The Ministry of Public Security"
+PLC_secret_police_idea_desc:0 ""
+PLC_scattered_bureaucracy_idea:0 "Overwhelmed Buureaucracy"
+PLC_scattered_bureaucracy_idea_desc:0 ""
+PLC_scattered_bureaucracy_idea1:0 "Overwhelmed Buureaucracy"
+PLC_scattered_bureaucracy_idea1_desc:0 ""
+PLC_universal_suffrage_idea:0 "Universal Suffrage"
+PLC_universal_suffrage_idea_desc:0 ""
+PLC_diplomatic_offices_idea:0 "International Diplomatic Offices"
+PLC_diplomatic_offices_idea_desc:0 ""
+PLC_cultural_tensions_idea:0 "Cultural Tensions"
+PLC_cultural_tensions_idea_desc:0 ""
+PLC_cultural_tensions_idea1:0 "Cultural Tensions"
+PLC_cultural_tensions_idea1_desc:0 ""
+PLC_mobilise_the_people:0 "Mobilise the People"
+PLC_mobilise_the_people_desc:0 ""
+PLC_minority_guarantees_idea:0 "Minority Guarantees"
+PLC_minority_guarantees_idea_desc:0 ""
+PLC_polish_fleet_idea:0 "A Polish-Led Fleet"
+PLC_polish_fleet_idea_desc:0 ""
+PLC_lithuanian_fleet_idea:0 "A Lithuanian-Led Fleet"
+PLC_lithuanian_fleet_idea_desc:0 ""
+PLC_anti_submarine_idea:0 "Anti-Submarine Tactics"
+PLC_anti_submarine_idea_desc:0 ""
+PLC_protecting_the_baltic:0 "Protecting the Baltic"
+PLC_protecting_the_baltic_desc:0 ""
+PLC_atlantic_fleet:0 "The Atalntic Fleet"
+PLC_atlantic_fleet_desc:0 ""
+PLC_impenetrable_defense_idea:0 "An Impenetrable Defence"
+PLC_impenetrable_defense_idea_desc:0 ""
+PLC_international_railways_idea:0 "International Railways"
+PLC_international_railways_idea_desc:0 ""
+PLC_never_surrender_idea:0 "Never Surrender"
+PLC_never_surrender_idea_desc:0 ""
+PLC_trench_warfare_idea:0 "Trench Warfare"
+PLC_trench_warfare_idea_desc:0 ""
+PLC_supply_chains_idea:0 "Efficient Supply Chains"
+PLC_supply_chains_idea_desc:0 ""
+PLC_killing_blow_idea:0 "Strike the Killing Blow"
+PLC_killing_blow_idea_desc:0 ""
+PLC_wartime_rationing_idea:0 "Wartime Rationing"
+PLC_wartime_rationing_idea_desc:0 ""
+PLC_centralized_state_idea:0 "A Centralised State"
+PLC_centralized_state_idea_desc:0 ""
+PLC_a_smaller_circle_idea:0 "A Smaller Circle"
+PLC_a_smaller_circle_idea_desc:0 ""
+PLC_tech_sharing_idea:0 "Technology Sharing"
+PLC_tech_sharing_idea_desc:0 ""
+PLC_german_advisors_idea:0 "German Advisors"
+PLC_german_advisors_idea_desc:0 ""
+PLC_mendog_idea:0 "Mindaugas III of Urach"
+PLC_mendog_idea_desc:0 ""
+PLC_expansionism_idea:0 "Expansionism"
+PLC_expansionism_idea_desc:0 ""
+PLC_peace_idea:0 "Peaceful Expansion"
+PLC_peace_idea_desc:0 ""
+PLC_common_currency_idea:0 "Common Currency"
+PLC_common_currency_idea_desc:0 ""
 
 ### Foci ###
 PLC_poland_first:0 "Warsaw as the Capital"
@@ -15,7 +91,7 @@ PLC_lithuania_first:0 "Vilnius as the Capital"
 PLC_the_new_bureaucracy:0 "The Bureaucracy First"
 PLC_solve_racial_tensions:0 "Solve Cultural Tensions"
 PLC_a_unifying_faith:0 "A Unifying Faith"
-PLC_a_new_capital:0 "Improving the Capital"
+PLC_a_new_capital:0 "Building the New Capital"
 PLC_expand_vilnius:0 "Expand Vilnius"
 PLC_build_warsaw_palace:0 "The Palace at Warsaw"
 PLC_sejm_dominance:0 "Dominate the Sejm"
@@ -25,7 +101,7 @@ PLC_polish_language:0 "Polish as the Official Language"
 PLC_minority_rights:0 "Minority Guarantees"
 PLC_decentralization:0 "Decentralisation"
 PLC_centralizing_power:0 "Centralising Power"
-PLC_building_the_capital:0 "Building the New Capital"
+PLC_building_the_capital:0 "Improving the Capital"
 PLC_vilnius_warsaw_railway:0 "The Vilnius-Warsaw Railway"
 PLC_an_absolute_monarch:0 "The Absolute Monarch"
 PLC_a_smaller_circle:0 "A Smaller Circle"
@@ -51,9 +127,9 @@ PLC_the_greater_commonwealth:0 "The Greater Commonwealth"
 PLC_ruthenian_invitation:0 "Ruthenian Referendum"
 PLC_galician_referendum:0 "The Galician Purchase"
 PLC_german_territories:0 "Our German Territories"
-PLC_strike_east:0 "Strike East"
-PLC_strike_south:0 "Strike South"
-PLC_strike_north:0 "Strike North"
+PLC_strike_east:0 "Strike the Russians"
+PLC_strike_south:0 "Strike towards Galicia"
+PLC_strike_north:0 "Strike Mitteleuropa"
 PLC_mobile_army:0 "A Mobile Army"
 PLC_impenetrable_defense:0 "An Impenetrable Defence"
 PLC_integrating_two_armies:0 "Integrating Two Armies"
@@ -382,6 +458,49 @@ plcommon.55.a:0 "The wheels of revolution turn!"
 plcommon.56.t:0 "The French Commune Dismisses Polish Interest"
 plcommon.56.d:0 "Seemingly distrusting the new Syndicalist regime in the Polish-Lithuanian Commonwealth, the Soviet Union has denied our entry into the Fourth International, stating that our belief in their ideals is too weak. Without the help of the Fourth International, our future in Europe looks bleak."
 plcommon.56.a:0 "Impossible!"
+plcommon.57.t:0 "A New Constitution"
+plcommon.57.d:0 "With the Polish-Lithuanian Commonwealth growing stronger by the day, it is becoming increasingly clear that the current constitution cannot handle the new political realities of the Commonwealth. Thus, the king has promised sweeping reforms in writing a new constitution, but we now have to think about what the reforms should actually entail."
+plcommon.57.a:0 "Focus on Economic Growth"
+plcommon.57.c:0 "Focus on Empowering the Military"
+plcommon.57.e:0 "Focus on Expanding Royal Power"
+plcommon.57.f:0 "Focus on National Unity"
+plcommon.58.t:0 "The Commonwealth Seeks Poznan"
+plcommon.58.d:0 "After the creation of the new Polish-Lithuanian Commonwealth, the new Commonwealth is pursuing diplomatic solutions to its territorial disputes, and is now seeking to acquire the territory of Poznan from us, which has a large Polish majority. In exchange, the Polish-Lithuanian Commonwealth will renounce any and all claims they hold to other Polish-majority regions we control. If we were to agree, it would cement a strong relationship with the Commonwealth. However, for us to cede any territory would certainly be seen as a sign of weakness..."
+plcommon.58.a:0 "It is a fair trade."
+plcommon.58.b:0 "Us? Surrendering territory? Unthinkable!"
+plcommon.59.t:0 "The Kaiser Agrees"
+plcommon.59.d:0 "Germany has agreed to our proposal for the cession of Poznan in exchange for us renouncing our claims on other true Commonwealth territory they hold. With this transfer of territory, we can now welcome back millions of our brethren back into the Commonwealth proper."
+plcommon.59.a:0 "R-really?"
+plcommon.60.t:0 "An Unacceptable Trade"
+plcommon.60.d:0 "The Kaiser has flatly denied our request for territory, stating that they only deal with "proper nations" and that we should learn our place in the European hierarchy. It seems like we shall not be seeing Poznan under our care for some time."
+plcommon.60.a:0 "To be expected..."
+plcommon.61.t:0 "A Referendum in Ruthenia"
+plcommon.61.d:0 "The territories that were rightfully Polish but ceded by the Treaty of Brest-Livotsk now lie under the control of the German puppet Ruthenia. We should seek a diplomatic solution to this problem, and we believe that a proper referendum on the territroies joining the Commonwelath is a proper way to handle this situation. We should amke the proposal ot the Ruthenians as soon as possible."
+plcommon.61.a:0 "I hope they agree."
+plcommon.62.t:0 "A Referendum?"
+plcommon.62.d:0 "The new Polish-Lithuanian Commonwealth has made a diplomatic request for a referndum to be held on the status of our border territories with their nation. If we agree, the territories will hold a vote to either stay with Ruthenia, or join the Commonwealth. How should we respond?"
+plcommon.62.a:0 "It is the proper thing to do."
+plcommon.62.b:0 "Never!"
+plcommon.63.t:0 "The Ruthenians Agree"
+plcommon.63.d:0 "The Ruthenians have agreed to our referendum proposal, and the voting is due to begin shortly."
+plcommon.63.a:0 "Fantastic!"
+plcommon.64.t:0 "The Ruthenians Refuse"
+plcommon.64.d:0 "The Ruthenians have declined our suggestion to hold a referndum, citing our claims to the region as "outrageous" and "fantasy". This is a dissapointing outcome..."
+plcommon.64.a:0 "We will find another way."
+plcommon.65.t:0 "The Referendum Begins"
+plcommon.65.d:0 "The agreed upon date has arrived, and along the border territroeis many Ruthenians are voting on whether to stay with our nation or join the Commonwealth. We could allow this voting to continue uninterrupted, or perhaps we could ensure our side won the vote..."
+plcommon.65.a:0 "The vote shall continue."
+plcommon.65.b:0 "We must win at any cost."
+plcommon.66.t:0 "The Ruthenian Referendum"
+plcommon.66.d:0 "If you're seeing this event, something has gone horribly wrong! Bug Report it!"
+plcommon.66.a:0 "Whoops!"
+plcommon.66.b:0 "How did I get here again?"
+plcommon.67.t:0 "The Referendum Succeeds!"
+plcommon.67.d:0 "After the votes have been tallied, our side has won the referendum! The territories our now ours!"
+plcommon.67.a:0 "Let's Celebrate!"
+plcommon.68.t:0 "The Referendum Fails!"
+plcommon.68.d:0 "After the votes have been tallied, our side has lost the referendum vote. It was a good attempt, at least."
+plcommon.68.a:0 "Unfortunate."
 
 ### Parties ###
 PLC_totalist_party:0 "Free Worker's Party"
@@ -408,10 +527,12 @@ PLC_national_populist_party_long:0 "The National-Radical Party"
 ### Flags ###
 plc_polish_favor:0 "§RThis option will favor Poland in the makeup of the Commonwealth.§! \n"
 plc_lithuanian_favor:0 "§RThis option will favor Lithuania in the makeup of the Commonwealth.§! \n"
-PLC_russian_forts_tooltip:0 " will gain a large fortification on the Russian border.\n"
-PLC_holding_our_gains_tooltip:0 " will gains city-wide fortifications. \n"
+PLC_russian_forts_tooltip:0 "will gain a large fortification on the Russian border.\n"
+PLC_holding_our_gains_tooltip:0 "will gains city-wide fortifications. \n"
 PLC_coastal_forts_tooltip:0 "will recieve extensive coastal fortifications. \n"
 PLC_garrison_training_tooltip:0 "You will train Garrison Troops for your coastal area."
 PLC_chose_germany:0 "The Commonwealth remains in Mitteleuropa"
 PLC_chose_alone:0 "The Commonwealth leaves Mitteleuropa"
 PLC_chose_syndicalist:0 "The Commonwealth has Embraced Syndicalism"
+PLC_capital_bunker:0 "will recieve fortifications in the capital.\n"
+PLC_select_capital:0 "A New Capital must first be selected.\n"
