PLC Tree Complete

--- a/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
+++ b/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
@@ -11,7 +11,7 @@ PLC_POL_air_force:0 "Polish Royal Air Force"
 PLC_POL_air_force_desc:0 ""
 PLC_LIT_air_force:0 "Lithuanian Royal Air Force"
 PLC_LIT_air_force_desc:0 ""
-PLC_conforming_rail_gauge_idea:0 "ConformeD Rail Gauges"
+PLC_conforming_rail_gauge_idea:0 "Conformed Rail Gauges"
 PLC_conforming_rail_gauge_idea_desc:0 ""
 PLC_mobile_army_idea:0 "A Mobile Army"
 PLC_mobile_army_idea_desc:0 ""
@@ -27,9 +27,9 @@ PLC_polish_enthusiasm_idea:0 "Polish Enthusiasm"
 PLC_polish_enthusiasm_idea_desc:0 ""
 PLC_secret_police_idea:0 "The Ministry of Public Security"
 PLC_secret_police_idea_desc:0 ""
-PLC_scattered_bureaucracy_idea:0 "Overwhelmed Buureaucracy"
+PLC_scattered_bureaucracy_idea:0 "Overwhelmed Bureaucracy"
 PLC_scattered_bureaucracy_idea_desc:0 ""
-PLC_scattered_bureaucracy_idea1:0 "Overwhelmed Buureaucracy"
+PLC_scattered_bureaucracy_idea1:0 "Overwhelmed Bureaucracy"
 PLC_scattered_bureaucracy_idea1_desc:0 ""
 PLC_universal_suffrage_idea:0 "Universal Suffrage"
 PLC_universal_suffrage_idea_desc:0 ""
